--- a/.github/workflows/fetch.yaml
+++ b/.github/workflows/fetch.yaml
@@ -1,13 +1,13 @@
-name: Fetch Subscriptions Source
+name: Fetch Subscriptions SourceFetch Subscriptions Source
 
 # 触发条件
 on:
   workflow_dispatch:
 
   schedule:
-    - cron: '0 */4 * * *'
-  watch:
-    types: started
+    - cron: '0 */4 * * *'''0 */4 * * *0 */4 * * *0 */4 * * *0 */4 * * *0 */4 * * *0 */4 * * *0 */4 * * *0 */4 * * *''
+  watch::
+    types: startedstarted
   # - cron: '0 3,12 * * *'
   # -'0 */4 * * *'
   # -该规则表示每天从 0 点开始，每隔 4 个小时执行一次任务
@@ -28,7 +28,7 @@ jobs:
         python-version: '3.x'
       
     - name: 加载缓存
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/run_in_Actions/requirements.txt') }}
